<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/top_level">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:id="@+id/canvas"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_gravity="left"
            android:clipChildren="true"
            android:id="@+id/left">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/top_left"
                android:background="@drawable/top_left"
                android:onClick="launchSpotifyStramerApp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_left"
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/mid_left"
                android:background="@drawable/mid_left"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mid_left"
                    android:id="@+id/textView2"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:id="@+id/bot_left"
                android:background="@drawable/bot_left"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_left"
                    android:id="@+id/textView3"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textColor="@android:color/black"
                    android:gravity="center" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="4"
            android:id="@+id/right">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/top_right"
                android:background="@drawable/top_right"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_right"
                    android:id="@+id/textView4"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/mid_right"
                android:background="@drawable/mid_right"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mid_right"
                    android:id="@+id/textView5"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:id="@+id/bot_right"
                android:background="@drawable/bot_right"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_right"
                    android:id="@+id/textView6"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:gravity="center" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar" />
</LinearLayout>
